--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,7 +7,7 @@
         file: "{{ vsts_agent_vaulted_variables }}"
         name: vsts_agent
     - ansible.builtin.include_role:
-        name: jamesjonesconsulting.azure_devops_agent_fixes.agent_setup
+        name: jamesjonesconsulting.azuredevops_agent_fixes.agent_setup
       vars:
         vsts_agents: "{{ vsts_agents }}"
         vsts_agent_podman_group: docker
