--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -12,5 +12,5 @@
         vsts_agents: "{{ vsts_host_agents }}"
         vsts_agent_podman_group: "{{ vsts_agent_host_podman_group }}"
         vsts_agent_url: "{{ vsts_agent_host_url }}"
-    #     vsts_agent_registration_token: "{{ vsts_agent_registration_token }}"
+        vsts_agent_registration_token: "{{ token }}"
     #     vsts_agent_tags: "{{ vsts_agent_host_tags }}"
